<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="start"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_light" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tabLayout"
            android:background="#ACC1C1" />

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="220dp"
            android:layout_height="230dp"
            android:layout_below="@id/viewPager"
            android:layout_marginStart="90dp"
            android:layout_marginTop="0dp" />


        <TextView
            android:id="@+id/name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/detail_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/detail_username"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/detail_location"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repository_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/detail_repository"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/detail_company"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers_deatil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/detail_followers"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/following_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_detail"
            android:layout_marginLeft="175dp"
            android:text="@string/detail_following"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>